--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,13 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-body {
+  background-color: #D1C4E9; }
+
+.modal-header {
+  background-color: #512DA8;
+  color: floralwhite;
+  border-bottom: 0px; }
+  .modal-header .close {
+    color: floralwhite; }
